# mythril-agent-skills

./: .gitignore  .sync-upstream.yaml  AGENTS.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.claude-plugin/: marketplace.json
docs/: CACHE.md  DEVELOPMENT.md  FORK-SYNC.md  FULLSTACK-INIT.md  INSTALLATION.md  PUBLISHING.md
docs/fullstack/: FULLSTACK-IMPL.md  FULLSTACK-INIT.md
mythril_agent_skills/: __init__.py
mythril_agent_skills/cli/: skills_check.py  skills_clean_cache.py  skills_cleanup.py  skills_setup.py
mythril_agent_skills/shared/: __init__.py
mythril_agent_skills/shared/mermaid/: __init__.py
mythril_agent_skills/skills/android-screen-reader/: SKILL.md
mythril_agent_skills/skills/blog-writer/: README.md  SKILL.md
mythril_agent_skills/skills/branch-diff-review/: SKILL.md
mythril_agent_skills/skills/code-review-pr/: README.md  SKILL.md
mythril_agent_skills/skills/code-review-staged/: SKILL.md
mythril_agent_skills/skills/code-review-staged/references/: commit-format.md
mythril_agent_skills/skills/confluence/: SKILL.md
mythril_agent_skills/skills/confluence/scripts/: confluence_api.py
mythril_agent_skills/skills/excel/: README.md  SKILL.md
mythril_agent_skills/skills/excel/scripts/: excel_ops.py
mythril_agent_skills/skills/ffmpeg/: SKILL.md
mythril_agent_skills/skills/figma/: API_REFERENCE.md  README.md  SKILL.md
mythril_agent_skills/skills/figma/scripts/: figma_export.py  figma_fetch.py
mythril_agent_skills/skills/fullstack-impl/: SKILL.md
mythril_agent_skills/skills/fullstack-impl/references/: MERMAID-RULES.md  document-templates.md  followup-mode.md  iteration-mode.md  mode-selection.md  reference-mode.md  review-formats.md
mythril_agent_skills/skills/fullstack-impl/scripts/: check_github_repos.py  check_workspace.py  iteration_log_check.py  mermaid_lint.py  mermaid_validate.py  route_check.py
mythril_agent_skills/skills/fullstack-init/: SKILL.md
mythril_agent_skills/skills/fullstack-init/scripts/: workspace_init.py
mythril_agent_skills/skills/fullstack-investigate/: SKILL.md
mythril_agent_skills/skills/fullstack-spike/: SKILL.md
mythril_agent_skills/skills/gh-operations/: README.md  SKILL.md
mythril_agent_skills/skills/git-repo-reader/: SKILL.md
mythril_agent_skills/skills/git-repo-reader/scripts/: repo_manager.py
mythril_agent_skills/skills/github-code-review-pr/: README.md  SKILL.md
mythril_agent_skills/skills/github-pr-create/: SKILL.md
mythril_agent_skills/skills/glean/: README.md  SKILL.md
mythril_agent_skills/skills/imagemagick/: SKILL.md
mythril_agent_skills/skills/jira/: ACLI.md  PYTHON.md  README.md  SKILL.md
mythril_agent_skills/skills/md-to-pdf/: SKILL.md
mythril_agent_skills/skills/pdf/: README.md  SKILL.md
mythril_agent_skills/skills/seo-analysis/: README.md  SKILL.md
mythril_agent_skills/skills/skill-creator/: SKILL.md
mythril_agent_skills/skills/user-journey/: README.md  SKILL.md
mythril_agent_skills/skills/word/: SKILL.md
plugins/android-screen-reader/skills/: android-screen-reader
plugins/blog-writer/skills/: blog-writer
plugins/excel/skills/: excel
plugins/fullstack-impl/skills/: fullstack-impl
plugins/fullstack-init/skills/: fullstack-init
plugins/fullstack-investigate/skills/: fullstack-investigate
plugins/fullstack-spike/skills/: fullstack-spike
plugins/github-pr-create/skills/: github-pr-create
plugins/glean/skills/: glean
plugins/md-to-pdf/skills/: md-to-pdf
plugins/pdf/skills/: pdf
plugins/seo-analysis/skills/: seo-analysis
plugins/user-journey/skills/: user-journey
scripts/: init-fork.py  publish.py  setup  setup_skills.py  skills-clean-cache.py  sync-shared-assets.py  sync-upstream.py  validate-skill-descriptions.py
skills/gh-operations/: README.md  SKILL.md
tests/: conftest.py  test_shared_assets_sync.py
tests/skills/: test_confluence.py  test_excel.py  test_figma.py  test_fullstack_impl.py  test_fullstack_init.py  test_git_repo_reader.py  test_github_code_review_pr.py  test_github_pr_create.py  test_jira.py  test_md_to_pdf.py  test_pdf.py  test_skill_creator.py  test_user_journey.py  test_word.py
(+37 files in other folders)
