[build-system]
requires = ["setuptools>=68.0,<75", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mythril-agent-skills"
version = "0.1.1"
description = "Reusable skills for AI coding assistants (Copilot, Claude Code, Cursor, Codex, Gemini CLI, and more)"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Jie Meng"},
]
keywords = ["ai", "skills", "coding-assistant", "claude", "cursor", "copilot", "codex", "gemini"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/jie-meng/mythril-agent-skills"
Repository = "https://github.com/jie-meng/mythril-agent-skills"
Issues = "https://github.com/jie-meng/mythril-agent-skills/issues"

[project.scripts]
skills-setup = "mythril_agent_skills.cli.skills_setup:main"
skills-cleanup = "mythril_agent_skills.cli.skills_cleanup:main"
skills-check = "mythril_agent_skills.cli.skills_check:main"

[tool.setuptools.packages.find]
include = ["mythril_agent_skills*"]

[tool.setuptools.package-data]
mythril_agent_skills = [
    "skills/**/*",
]
